--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <input type="submit" class="btn next">
                         </form>
                         <p class="subscription-description">Какие-то пояснения, или доп инормация про подписку (с
-                            баланса вашей карты бдут списыватся, описаться всегда можно личном кабинете.</p>
+                            баланса вашей карты бдут списыватся, отписаться всегда можно личном кабинете.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
